--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,3 +56,33 @@
   --text-body: #c8cdd0;
   --text-heading: #f9f9f9;
 }
+
+body {
+  overflow: hidden;
+
+  font: var(--text-body-sm);
+  color: var(--text-body);
+  background-color: var(--shape-background);
+}
+
+h1,
+h2 {
+  color: var(--text-heading);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-2 {
+  flex: 2;
+}
